manifests/my-nginx-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-headless
  labels:
    run: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  clusterIP: None
  selector:
    run: my-nginx
