manifests/my-nginx-service-nodePort.yaml
#apiVersion: v1
#kind: Service
#metadata:
#name: my-nginx
#labels:
#run: my-nginx
##spec:
##ports:
#- port: 80
#protocol: TCP
#selector:
#run: my-nginx
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
    run: my-nginx
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: my-nginx
